# sonify-k8s

./: .gitignore  Cargo.toml  Makefile  README.md  README_RUST.md  SPARC_DESIGN.md  config.yaml  issues.md  microgm-opt.sf2  requirements.txt  test_main.py  web.yaml
src/: config.rs  error.rs  lib.rs  main.py  main.rs  sonify_k8s.py
src/audio/: engine.rs  envelope.rs  generator.rs  mod.rs
src/display/: color.rs  mod.rs
src/k8s/: client.rs  metrics.rs  mod.rs
src/sonify/: mapper.rs  mod.rs  sound_map.rs
tests/: integration_test.rs
