[package]
name = "sonify-k8s"
version = "2.0.0"
edition = "2021"
authors = ["Michael Colletti <michael@example.com>"]
description = "Transform Kubernetes cluster metrics into sound - Rust edition"
license = "MIT"
repository = "https://github.com/michaelcolletti/sonify-k8s"

[dependencies]
# Kubernetes client
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio - using rodio for safe, pure-Rust audio (optional)
rodio = { version = "0.17", optional = true }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Terminal colors
crossterm = "0.27"

# Math utilities
libm = "0.2"

# Date/time
chrono = "0.4"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[features]
default = []
audio = ["rodio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
